--- a/design.html
+++ b/design.html
@@ -6,14 +6,15 @@ slug: design
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Visual Design</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">The best solutions seamlessly integrate your business objectives with your visual and verbal presentation. Style without substance is meaningless. Good design is timeless.</h3>
-    <p class="measure lh-copy wow animated fadeIn">{{ site.title }} creates balanced solutions that reach consumers in innovative ways by focusing on the aesthetics of a site and its related materials by strategically implementing images, colors, fonts, and other elements.</p>
-    <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
-      <label class="db mv1 tracked light-silver b ttu"><small>Visual Design Capabilities</small></label>
-      <li class="fl-ns w-50-ns"><small>Print</small></li>
-      <li class="fl-ns w-50-ns"><small>Web and interactive</small></li>
-      <li class="fl-ns w-50-ns"><small>Motion effects</small></li>
-      <li class="fl-ns w-50-ns"><small>3D and environmental design</small></li>
-    </ul>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} creates balanced solutions that reach consumers in innovative ways by focusing on the aesthetics of a site and its related materials by strategically implementing images, colors, fonts, and other elements.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Visual Design Capabilities</small></label>
+    <li class="fl-ns w-50-ns"><small>Print</small></li>
+    <li class="fl-ns w-50-ns"><small>Web and interactive</small></li>
+    <li class="fl-ns w-50-ns"><small>Motion effects</small></li>
+    <li class="fl-ns w-50-ns"><small>3D and environmental design</small></li>
+  </ul>
 <!--   <center class="mv4 mv5-ns" data-flickity='{ "wrapAround": true }'>
     <article class="ph3 ph4-ns pv4 pv6-ns relative w-100 bg-navy near-white">
       <div id="particles-js" class="absolute absolute--fill"></div>
@@ -197,14 +198,15 @@ slug: design
 <section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Branding and Identity Collateral</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">The material you use to reinforce your business needs to be able to communicate your message in a clear and conscise way.</h3>
-    <p class="measure lh-copy wow animated fadeIn">{{ site.title }} creates brands that are meaningful and consistent across all touch points, and leave a lasting impression to your audience.</p>
-    <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
-      <label class="db mv1 tracked light-silver b ttu"><small>Branding and Identity Collateral Capabilities</small></label>
-      <li class="fl-ns w-50-ns"><small>Logo treatments</small></li>
-      <li class="fl-ns w-50-ns"><small>Color palletes</small></li>
-      <li class="fl-ns w-50-ns"><small>Letterhead and business cards</small></li>
-      <li class="fl-ns w-50-ns"><small>Digital wallpapers and banners</small></li>
-    </ul>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} creates brands that are meaningful and consistent across all touch points, and leave a lasting impression to your audience.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Branding and Identity Collateral Capabilities</small></label>
+    <li class="fl-ns w-50-ns"><small>Logo treatments</small></li>
+    <li class="fl-ns w-50-ns"><small>Color palletes</small></li>
+    <li class="fl-ns w-50-ns"><small>Letterhead and business cards</small></li>
+    <li class="fl-ns w-50-ns"><small>Digital wallpapers and banners</small></li>
+  </ul>
 </section>
 <section class="ph3 ph4-ns pv4 pv5-ns near-white bg-blue tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
