--- a/strategy.html
+++ b/strategy.html
@@ -9,7 +9,7 @@ slug: strategy
   <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
   <p class="measure lh-copy wow animated fadeIn">Understanding the impact of design on your audience helps identify project challenges upfront and respond to users needs while still meeting your professional goals.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
-    <label class="db mv1 tracked light-silver b ttu"><small>User Research and Survey Capabilities</small></label>
+    <label class="db mv1 tracked light-silver b ttu"><small>User Research and Surveys Capabilities</small></label>
     <li class="fl-ns w-50-ns"><small>Digital surveys and questionaires</small></li>
     <li class="fl-ns w-50-ns"><small>Contextual and individual interviews</small></li>
     <li class="fl-ns w-50-ns"><small>Target audience and segmentations</small></li>
@@ -146,7 +146,7 @@ slug: strategy
     {% endfor %}
   </div>
 </section>
-<!-- <section class="ph3 ph4-ns pv4 pv6-ns near-white bg-near-black">
+<section class="ph3 ph4-ns pv4 pv6-ns near-white bg-near-black">
   <figure class="ma0">
     <div id="appRevenue" class="h5 mv2 mv4-ns"></div>
     <h2 class="f3 f2-ns mv0 lh-title tracked-tight wow animated fadeInDown">Global Mobile App Revenue (%) by Type</h2>
