--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ slug: home
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="technology">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Technology</h2>
-  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} takes an agnostic approach towards technology to best fit your needs.</h3>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} takes an agnostic approach towards technology to best fit your needs. We believe that technology can solve real problems by enabling new user experiences that promote growth and innovation.</h3>
   <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology.html">Technology Services<i class="fa fa-fw fa-long-arrow-right"></i></a>
-  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} builds across all devices, focusing on a client's entire digital ecosystem with context, mobile and user center design at its core to turn your ideas and designs into functional, reliable products and services.</p>
+  <p class="measure lh-copy wow animated fadeIn">We build across and for all devices, focusing on a client's entire digital ecosystem with context, mobile and user center design at its core to turn your ideas and designs into functional, reliable products and services.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
     <li class="fl-ns w-50-ns"><small>Responsive development</small></li>
