--- a/technology.html
+++ b/technology.html
@@ -3,7 +3,7 @@ layout: page
 title: Technology
 slug: tech
 ---
-<section class="ph3 ph4-ns pv3 pv5-ns near-white bg-near-black tc">
+<section class="ph3 ph4-ns pv4 pv5-ns near-white bg-blue tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
   <div class="wow animated fadeInUp">
