--- a/technology.html
+++ b/technology.html
@@ -3,6 +3,20 @@ layout: page
 title: Technology
 slug: tech
 ---
+<section class="ph3 ph4-ns pv4 pv6-ns bg-white">
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Digital Consulting</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">Given the multifaceted nature of digital platforms, web channels and devices, {{ site.title }} focuses on identifying key digital initiatives in order to sustain long term continuity and business objectives.</h3>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <p class="measure lh-copy wow animated fadeIn">Optimizing technology investments improves business returns, and improves customer engagement through social media, analytics, mobility, automation, and cloud solutions that are appropriate for your business size and budget.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Digital Consulting Capabilities</small></label>
+    <li class="fl-ns w-50-ns"><small>Optimization opportunities</small></li>
+    <li class="fl-ns w-50-ns"><small>Vendor and platform selection</small></li>
+    <li class="fl-ns w-50-ns"><small>Software selection</small></li>
+    <li class="fl-ns w-50-ns"><small>Hardware solutions</small></li>
+    <li class="fl-ns w-50-ns"><small>Price benchmarking</small></li>
+  </ul>
+</section>
 <section class="ph3 ph4-ns pv4 pv5-ns near-white bg-blue tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
