--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ slug: home
   <p class="measure lh-copy wow animated fadeIn">We build across and for all devices, focusing on a client's entire digital ecosystem with context, mobile and user center design at its core to turn your ideas and designs into functional, reliable products and services.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
-    <li class="fl-ns w-50-ns"><small>Technical consulting</small></li>
+    <li class="fl-ns w-50-ns"><small>Digital consulting</small></li>
     <li class="fl-ns w-50-ns"><small>E-commerce consulting</small></li>
     <li class="fl-ns w-50-ns"><small>Rapid prototyping</small></li>
     <li class="fl-ns w-50-ns"><small>Responsive development</small></li>
