--- a/technology.html
+++ b/technology.html
@@ -17,6 +17,18 @@ slug: tech
     <li class="fl-ns w-50-ns"><small>Price benchmarking</small></li>
   </ul>
 </section>
+<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">E-commerce Consulting</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">E-commerce encompasses many components. {{ site.title }} starts with a clear understanding of objectives, future goals, and current capabilites.</h3>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Case Studies<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <p class="measure lh-copy wow animated fadeIn">Building the best e-commerce foundation can require several different technology systems and solutions. At {{ site.title }}, we provide unbiased technical assestments to identify areas of opportunities or build the right infrastructure and supporting technologies.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>E-commerce Consulting Capabilities</small></label>
+    <li class="fl-ns w-50-ns"><small>Optimization opportunities</small></li>
+    <li class="fl-ns w-50-ns"><small>Vendor and platform selection</small></li>
+    <li class="fl-ns w-50-ns"><small>Price benchmarking</small></li>
+  </ul>
+</section>
 <section class="ph3 ph4-ns pv4 pv5-ns near-white bg-blue tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
