--- a/technology.html
+++ b/technology.html
@@ -29,6 +29,19 @@ slug: tech
     <li class="fl-ns w-50-ns"><small>Price benchmarking</small></li>
   </ul>
 </section>
+<section class="ph3 ph4-ns pv4 pv6-ns bg-white">
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Rapid UI Protyping</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} implements an iterative approach to user interface development by using open source tools and frameworks to generate user feedback, improve the final design, and reduce cost.</h3>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <p class="measure lh-copy wow animated fadeIn">Prototypes range from visual low fidelity to content high fidelity. Depending on your business objectives and goals, we have a variety of tools to develop an interactive experience.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Rapid Prototyping Capabilities</small></label>
+    <li class="fl-ns w-50-ns"><small>Sketches and ideation</small></li>
+    <li class="fl-ns w-50-ns"><small>Low fidelity and static wireframes</small></li>
+    <li class="fl-ns w-50-ns"><small>High fidelity and interactive wireframes</small></li>
+    <li class="fl-ns w-50-ns"><small>HTML and CSS prototypes</small></li>
+  </ul>
+</section>
 <section class="ph3 ph4-ns pv4 pv5-ns near-white bg-blue tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
