--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@ slug: home
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
     <li class="fl-ns w-50-ns"><small>Digital consulting</small></li>
     <li class="fl-ns w-50-ns"><small>E-commerce consulting</small></li>
-    <li class="fl-ns w-50-ns"><small>Rapid prototyping</small></li>
-    <li class="fl-ns w-50-ns"><small>Responsive development</small></li>
+    <li class="fl-ns w-50-ns"><small>Rapid interface prototyping</small></li>
     <li class="fl-ns w-50-ns"><small>Pattern library development</small></li>
     <li class="fl-ns w-50-ns"><small>Web animation development</small></li>
     <li class="fl-ns w-50-ns"><small>Front-end engineering</small></li>
