--- a/technology.html
+++ b/technology.html
@@ -30,7 +30,7 @@ slug: tech
   </ul>
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
-  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Rapid UI Protyping</h2>
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Rapid Interface Protyping</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} implements an iterative approach to user interface development by using open source tools and frameworks to generate user feedback, improve the final design, and reduce cost.</h3>
   <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
   <p class="measure lh-copy wow animated fadeIn">Prototypes range from visual low fidelity to content high fidelity. Depending on your business objectives and goals, we have a variety of tools to develop an interactive experience.</p>
