--- a/strategy.html
+++ b/strategy.html
@@ -4,6 +4,22 @@ title: Strategy
 slug: strategy
 ---
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Stakeholder Interviews</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">At {{ site.title }}, during the early stages of any engagement, we are focused on conversation and discussion to better understand the importantance of vision and objectives.</h3>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Case Studies<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <p class="measure lh-copy wow animated fadeIn">Gathering all specific requirements, business and professional cases, and proposed or desired capabilities to inform a project plan when making crucial decisions regarding objectives, scope, schedule, resources, and deliverables.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Stakeholder Interviews Capabilities</small></label>
+    <li class="fl-ns w-50-ns"><small>Stakeholder insights and keynotes</small></li>
+    <li class="fl-ns w-50-ns"><small>Functionality and requirement gathering</small></li>
+    <li class="fl-ns w-50-ns"><small>Identifying business requirements</small></li>
+    <li class="fl-ns w-50-ns"><small>Identifying user requirements</small></li>
+    <li class="fl-ns w-50-ns"><small>Defining functional requirements</small></li>
+    <li class="fl-ns w-50-ns"><small>Identifying quality-of-service requirements</small></li>
+    <li class="fl-ns w-50-ns"><small>Providing implementation requirements</small></li>
+  </ul>
+</section>
+<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="strategy">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">User Research and Surveys</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on understanding your user's behaviors, needs, and motivations.</h3>
   <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
