--- a/strategy.html
+++ b/strategy.html
@@ -3,7 +3,7 @@ layout: page
 title: Strategy
 slug: strategy
 ---
-<section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
+<section class="ph3 ph4-ns pv4 pv6-ns bg-white">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Stakeholder Interviews</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">At {{ site.title }}, during the early stages of any engagement, we are focused on conversation and discussion to better understand the importantance of vision and objectives.</h3>
   <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Case Studies<i class="fa fa-fw fa-long-arrow-right"></i></a>
@@ -19,18 +19,43 @@ slug: strategy
     <li class="fl-ns w-50-ns"><small>Providing implementation requirements</small></li>
   </ul>
 </section>
-<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="strategy">
+<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">User Research and Surveys</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on understanding your user's behaviors, needs, and motivations.</h3>
   <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
-  <p class="measure lh-copy wow animated fadeIn">Understanding the impact of design on your audience helps identify project challenges upfront and respond to users needs while still meeting your professional goals.</p>
+  <p class="measure lh-copy wow animated fadeIn">Understanding your audience helps identify project challenges upfront and respond to users needs while still meeting your professional goals.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>User Research and Surveys Capabilities</small></label>
     <li class="fl-ns w-50-ns"><small>Digital surveys and questionaires</small></li>
     <li class="fl-ns w-50-ns"><small>Contextual and individual interviews</small></li>
     <li class="fl-ns w-50-ns"><small>Target audience and segmentations</small></li>
-    <li class="fl-ns w-50-ns"><small>User entry points and pathways</small></li>
     <li class="fl-ns w-50-ns"><small>Conversion funnels and optimization</small></li>
+  </ul>
+</section>
+<section class="ph3 ph4-ns pv4 pv6-ns bg-white">
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">User Personas and Pathway Development</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} creates reliable and realistic representations of your key audience segments for reference and to focus decisions surrounding site components by adding a layer of real-world consideration to the conversation.</h3>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <p class="measure lh-copy wow animated fadeIn">User personas and scenarios are critical both for designing an interface and for usability testing. We want to express and focus on the major needs and expectations of the most important user groups.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>User Personas and Pathway Development Capabilities</small></label>
+    <li class="fl-ns w-50-ns"><small>Detailed user narratives</small></li>
+    <li class="fl-ns w-50-ns"><small>User entry points and pathways</small></li>
+    <li class="fl-ns w-50-ns"><small>Goal and task journeys</small></li>
+    <li class="fl-ns w-50-ns"><small>Task analysis</small></li>
+  </ul>
+</section>
+<section class="ph3 ph4-ns pv4 pv6-ns bg-white">
+  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Brand and Identity Planning</h2>
+  <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} knows that your logo is not your brand, and it is not your identity. Communication, messaging, and tone all have differ roles, that together, formulate a perception and expectation for your users and customers.</h3>
+  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} uses emotion and projects a humanistic culture to connect with your audience and community.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Brand and Identity Planning Capabilities</small></label>
+    <li class="fl-ns w-50-ns"><small>Brand communication and voice</small></li>
+    <li class="fl-ns w-50-ns"><small>Value propositions</small></li>
+    <li class="fl-ns w-50-ns"><small>Actions and aspirations</small></li>
+    <li class="fl-ns w-50-ns"><small>Brand and identity experience</small></li>
   </ul>
 </section>
 <!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
