--- a/design.html
+++ b/design.html
@@ -6,6 +6,16 @@ slug: design
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Visual Design</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">The best solutions seamlessly integrate your business objectives with your visual and verbal presentation. Style without substance is meaningless. Good design is timeless.</h3>
+  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} creates balanced solutions that reach consumers in innovative ways by focusing on the aesthetics of a site and its related materials by strategically implementing images, colors, fonts, and other elements.</p>
+  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
+    <label class="db mv1 tracked light-silver b ttu"><small>Visual Design Capabilities</small></label>
+    <li class="fl-ns w-50-ns"><small>Print</small></li>
+    <li class="fl-ns w-50-ns"><small>Web & Interactive</small></li>
+    <li class="fl-ns w-50-ns"><small>Motion Effects</small></li>
+    <li class="fl-ns w-50-ns"><small>3D & Environmental Design</small></li>
+  </ul>
+</section>
+<!-- <section class="ph3 ph4-ns pv3 pv5-ns bg-white">
   <center class="mv4 mv5-ns" data-flickity='{ "wrapAround": true }'>
     <article class="ph3 ph4-ns pv4 pv6-ns relative w-100 bg-navy near-white">
       <div id="particles-js" class="absolute absolute--fill"></div>
@@ -41,21 +51,21 @@ slug: design
       <div id="autoplay" class="absolute absolute--fill">
         <video class="absolute absolute--fill" data-media='bg-video' preload="none" autoplay="autoplay" loop="loop" muted="muted">
           <source data-flickity-lazyload="{ site.baseurl }}assets/media/video/circus-co.mp4" src="{{ site.baseurl }}assets/media/video/circus-co.mp4" type="video/mp4">
-          <!-- <source src="{{ site.baseurl }}assets/media/video/portfolio_FILM.webm" type="video/webm">
-          <source src="{{ site.baseurl }}assets/media/video/portfolio_FILM.ogv"  type="video/ogg" codecs="theora, vorbis"> -->
+          <source src="{{ site.baseurl }}assets/media/video/portfolio_FILM.webm" type="video/webm">
+          <source src="{{ site.baseurl }}assets/media/video/portfolio_FILM.ogv"  type="video/ogg" codecs="theora, vorbis">
           Your user agent does not support the HTML5 Video element.
         </video>
       </div>
     </article>
-    <!-- <article class="ph3 ph4-ns pv4 pv6-ns mv4 relative bg-navy white">
+    <article class="ph3 ph4-ns pv4 pv6-ns mv4 relative bg-navy white">
       <center class="center w-100">
         <figure class="mw6">
           <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-nebuddha.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-nebuddha.png" class="db w-100 center mw7 mh3 wow animated fadeInDown" title="Nebuddha">
           <figcaption class="f6 f5-ns center mv2 mv3-ns measure-wide lh-copy">Kings <small>Primary</small></figcaption>
         </figure>
       </center>
-    </article> -->
-    <!-- <center class="cf w-100 mw8 center">
+    </article>
+    <center class="cf w-100 mw8 center">
       <figure class="w-100 w-third-l ma0 fl tc">
         <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-RGB.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-RGB.png" class="br-100 mh3 w5 wow animated fadeInDown" title="Appchain">
         <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Nebuddha Icon <small>Primary</small></figcaption>
@@ -68,132 +78,23 @@ slug: design
         <img data-flickity-lazyload="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" src="{{ site.baseurl }}/assets/images/{{ page.slug }}/logo/logo-appchain-ALT_K100.png" class="br-100 mh3 w5 wow animated fadeInDown" title="Appchain">
         <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Nebuddha Icon <small>Dark</small></figcaption>
       </figure>
-    </center> -->
+    </center>
   </center>
-  <p class="measure lh-copy wow animated fadeIn">{{ site.title }} creates balanced solutions that reach consumers in innovative ways by focusing on the aesthetics of a site and its related materials by strategically implementing images, colors, fonts, and other elements.</p>
-  <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
-    <label class="db mv1 tracked light-silver b ttu"><small>Visual Design Capabilities</small></label>
-    <li class="fl-ns w-50-ns"><small>Print</small></li>
-    <li class="fl-ns w-50-ns"><small>Web & Interactive</small></li>
-    <li class="fl-ns w-50-ns"><small>Motion Effects</small></li>
-    <li class="fl-ns w-50-ns"><small>3D & Environmental Design</small></li>
-  </ul>
-</section>
-<section class="ph3 ph4-ns pv4 pv6-ns bg-white">
+</section> -->
+<!-- <section class="ph3 ph4-ns pv3 pv5-ns bg-white">
   <center class="cf w-100 mw8 center">
-    <figure class="w-50 w-third-m w-20-l ma0 fl tc">
-      <svg id="clock" viewBox="0 0 100 100">
-        <circle id="face" cx="50" cy="50" r="40" style="fill:#1111"/>
-        <g id="hands">
-          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#fff"/>
-          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#fff"/>
-          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#9EEBCF"/>
-        </g>
+    <figure class="w-50 w-third-m w-25-l ma0 fl tc wow animated fadeInUp">
+      <svg data-clock="New York" viewBox="0 0 100 100">
+        <circle cx="50" cy="50" r="40" style="fill:#9EEBCF"/>
+        <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111111"/>
+        <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111111"/>
+        <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#FF725C"/>
       </svg>
-      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">New York <small>GMT +5</small></figcaption>
+      <figcaption class="f6 f5-ns ma0 b ttu lh-copy">New York <small>GMT +5</small></figcaption>
     </figure>
-    <!-- <figure class="w-third w-20-l ma0 fl tc">
-      <svg id="clock" viewBox="0 0 100 100">
-        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
-        <g id="hands">
-          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
-          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
-          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
-        </g>
-      </svg>
-      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">New York <small>GMT +5</small></figcaption>
-    </figure>
-    <figure class="w-third w-20-l ma0 fl tc">
-      <svg id="clock" viewBox="0 0 100 100">
-        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
-        <g id="hands">
-          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
-          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
-          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
-        </g>
-      </svg>
-      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">London <small>GMT +5</small></figcaption>
-    </figure>
-    <figure class="w-third w-20-l ma0 fl tc">
-      <svg id="clock" viewBox="0 0 100 100">
-        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
-        <g id="hands">
-          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
-          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
-          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
-        </g>
-      </svg>
-      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Tokyo <small>GMT +5</small></figcaption>
-    </figure>
-    <figure class="w-third w-20-l ma0 fl tc">
-      <svg id="clock" viewBox="0 0 100 100">
-        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
-        <g id="hands">
-          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
-          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
-          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
-        </g>
-      </svg>
-      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Istanbul <small>GMT +5</small></figcaption>
-    </figure>
-    <figure class="w-third w-20-l ma0 fl tc">
-      <svg id="clock" viewBox="0 0 100 100">
-        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
-        <g id="hands">
-          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
-          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
-          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
-        </g>
-      </svg>
-      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Oslo <small>GMT +5</small></figcaption>
-    </figure>
-    <figure class="w-third w-20-l ma0 fl tc">
-      <svg id="clock" viewBox="0 0 100 100">
-        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
-        <g id="hands">
-          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
-          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
-          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
-        </g>
-      </svg>
-      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Perth <small>GMT +5</small></figcaption>
-    </figure>
-    <figure class="w-third w-20-l ma0 fl tc">
-      <svg id="clock" viewBox="0 0 100 100">
-        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
-        <g id="hands">
-          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
-          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
-          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
-        </g>
-      </svg>
-      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Helsinki <small>GMT +5</small></figcaption>
-    </figure>
-    <figure class="w-third w-20-l ma0 fl tc">
-      <svg id="clock" viewBox="0 0 100 100">
-        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
-        <g id="hands">
-          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
-          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
-          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
-        </g>
-      </svg>
-      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Cairo <small>GMT +5</small></figcaption>
-    </figure>
-    <figure class="w-third w-20-l ma0 fl tc">
-      <svg id="clock" viewBox="0 0 100 100">
-        <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
-        <g id="hands">
-          <line id="hour" x1="50" y1="50" x2="50" y2="25" style="stroke-width:3px;stroke:#111"/>
-          <line id="min" x1="50" y1="50" x2="50" y2="15" style="stroke-width:3px;stroke:#111"/>
-          <line id="sec" x1="50" y1="55" x2="50" y2="12" style="stroke:#f55"/>
-        </g>
-      </svg>
-      <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">Sydney <small>GMT +5</small></figcaption>
-    </figure> -->
   </center>
   </article>
-</section>
+</section> -->
 <section class="ph3 ph4-ns pv3 pv5-ns near-white bg-near-black tc">
   <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
   <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
