--- a/strategy.html
+++ b/strategy.html
@@ -3,6 +3,55 @@ layout: page
 title: Strategy
 slug: strategy
 ---
+<section class="ph3 ph4-ns pv4 pv6-ns tc tl-ns bg-near-white">
+  <div data-flickity='{ "wrapAround": true, "adaptiveHeight": true, "lazyLoad": true }'>
+    <center class="w-100">
+      <figure class="mw8 center tc cf">
+        <img data-flickity-lazyload="https://s-media-cache-ak0.pinimg.com/originals/cd/be/fb/cdbefb5cf55dc544400ca73e0cb20785.jpg" src="https://s-media-cache-ak0.pinimg.com/originals/cd/be/fb/cdbefb5cf55dc544400ca73e0cb20785.jpg" class="br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Dieter Rams">
+        <figcaption class="fl-l tl-l center ma0 mh5-l">
+          <blockquote class="ma0 measure-wide lh-copy">
+            <h1 class="f1 f-5-l mv0 lh-solid tracked-tight wow animated fadeInDown" data-action="cursor">Less but better</h1>
+            <h2 class="f3 f2-l mv1 lh-title wow animated fadeInUp">Good design is thorough, down to the last detail.</h2>
+          </blockquote>
+        </figcaption>
+      </figure>
+    </center>
+    <center class="w-100">
+      <figure class="mw8 center tc cf">
+        <img data-flickity-lazyload="{{ site.baseurl }}assets/images/avatar.png" src="{{ site.baseurl }}assets/images/avatar.png" class="br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Bryan Colosky">
+        <figcaption class="fl-l tl-l center ma0 mh5-l">
+          <blockquote class="ma0 measure-wide lh-copy">
+            <h1 class="f1 f-5-l mv0 lh-solid tracked-tight wow animated fadeInDown" data-action="cursor">Context is king</h1>
+            <h2 class="f3 f2-l mv1 lh-title wow animated fadeInUp">The context of our experience makes it unique.</h2>
+          </blockquote>
+        </figcaption>
+      </figure>
+    </center>
+    <center class="w-100">
+      <figure class="mw8 center tc cf">
+        <img data-flickity-lazyload="http://assets4.bigthink.com/system/user_icons/119227/original/SimonSinek.jpg?1300906978" src="http://assets4.bigthink.com/system/user_icons/119227/original/SimonSinek.jpg?1300906978" class="br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Simon Sinek">
+        <figcaption class="fl-l tl-l center ma0 mh5-l">
+          <blockquote class="ma0 measure-wide lh-copy">
+            <h1 class="f1 f-5-l mv0 lh-solid tracked-tight wow animated fadeInDown" data-action="cursor">People don't buy what you do</h1>
+            <h2 class="f3 f2-l mv1 lh-title wow animated fadeInUp">They buy why you do it.</h2>
+          </blockquote>
+        </figcaption>
+      </figure>
+    </center>
+    <center class="w-100">
+      <figure class="mw8 center tc cf">
+        <img data-flickity-lazyload="http://johngushue.typepad.com/.a/6a00d83451f25369e201538f032a88970b-800wi" src="http://johngushue.typepad.com/.a/6a00d83451f25369e201538f032a88970b-800wi" class="br-100 ba bw3 center b--near-white bg-white w-4 h4 h5-l w5-l o-80 fl-l" title="Richard P. Feynman">
+        <figcaption class="fl-l tl-l center ma0 mh5-l">
+          <blockquote class="ma0 measure-wide lh-copy">
+            <h1 class="f1 f-5-l mv0 lh-solid tracked-tight wow animated fadeInDown" data-action="cursor">Science is the organized skepticism</h1>
+            <h2 class="f3 f2-l mv1 lh-title wow animated fadeInUp">In the
+            reliability of expert opinion.</h2>
+          </blockquote>
+        </figcaption>
+      </figure>
+    </center>
+  </div>
+</section>
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Stakeholder Interviews</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">At {{ site.title }}, during the early stages of any engagement, we are focused on conversation and discussion to better understand the importantance of vision and objectives.</h3>
@@ -193,10 +242,3 @@ slug: strategy
     <cite class="fs-normal silver"><a class="dib link blue underline-hover b ttu" href="strategy.html">U.S. Bureau of Labor Statistics<i class="fa fa-fw fa-long-arrow-right"></i></a></cite>
   </figure>
 </section> -->
-<section class="ph3 ph4-ns pv4 pv5-ns near-white bg-blue tc">
-  <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
-  <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
-  <div class="wow animated fadeInUp">
-    <a class="dim no-underline br-pill ba bw1 ph4 pv3 mv2 dib near-white b ttu tracked" href="mailto:info@studiocraft.cc">info@studiocraft.cc</a>
-  </div>
-</section>
