--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,8 +1,7 @@
 ---
-layout: page
+layout: general
 title: Terms of Use
 slug: tos
-permalink: /terms-of-service.html
 sitemap:
   exclude: true
 ---
@@ -10,11 +9,11 @@ sitemap:
   <article>
     <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Overview</h2>
     <label class="db tracked mv1 light-silver b ttu wow animated fadeInUp">Last updated: <time>{{ site.time | date: "%B %d, %Y" }}</time></label>
-    <p class="measure lh-copy wow animated fadeIn">Please read these Terms of Use ("Terms", "Terms of Use") carefully before using the <a href="{{ site.url }}" class="link underline-hover blue">{{ site.url }}</a> website (the "Service") operated by {{ site.author.name }} ("we", "us", or "our").</p>
+    <p class="measure lh-copy wow animated fadeIn">Please read these Terms of Use ("Terms", "Terms of Use") carefully before using the <a href="{{ site.url }}" class="link underline-hover blue">{{ site.url }}</a> website (the "Service") operated by {{ site.title }} ("we", "us", or "our").</p>
     <p class="lh-copy measure-wide wow animated fadeIn">Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
     <p class="lh-copy measure-wide wow animated fadeIn">By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.</p>
     <h3 class="f3 f2-ns lh-title tracked-tight wow animated fadeInDown">Termination</h3>
     <p class="lh-copy measure-wide wow animated fadeIn">We may terminate or suspend access to the Service immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</p>
-    <p class="lh-copy measure ttu  wow animated fadeIn">ALL PROVISIONS OF THE TERMS WHICH BY THEIR NATURE SHOULD SURVIVE TERMINATION SHALL SURVIVE TERMINATION, INCLUDING, WITHOUT LIMITATION, OWNERSHIP PROVISIONS, WARRANTY DISCLAIMERS, INDEMNITY AND LIMITATIONS OF LIABILITY.</p>
+    <p class="lh-copy measure-wide ttu wow animated fadeIn"><small>ALL PROVISIONS OF THE TERMS WHICH BY THEIR NATURE SHOULD SURVIVE TERMINATION SHALL SURVIVE TERMINATION, INCLUDING, WITHOUT LIMITATION, OWNERSHIP PROVISIONS, WARRANTY DISCLAIMERS, INDEMNITY AND LIMITATIONS OF LIABILITY.</small></p>
   </article>
 </section>
