--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ slug: home
     <li class="fl-ns w-50-ns"><small>Web animation development</small></li>
     <li class="fl-ns w-50-ns"><small>Front-end engineering</small></li>
   </ul>
-  <div class="cf">
+  <div class="cf mw8">
     <ul class="list fl w-100 w-50-m w-25-l pa0 mv4 mid-gray wow animated fadeInUp">
       <label class="db mv3 tracked light-silver b ttu"><small>Devices</small></label>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-mobile"></i></li>
@@ -81,13 +81,7 @@ slug: home
     </ul>
   </div>
 </section>
-<section class="ph3 ph4-ns pv4 pv5-ns near-white bg-blue tc">
-  <h2 class="f2 f1-ns mv0 lh-title tracked-tight wow animated fadeInDown">Get a Quote</h2>
-  <h3 class="f4 f3-ns mv2 normal lh-copy wow animated fadeIn">Want to work with {{ site.title }}?</h3>
-  <div class="wow animated fadeInUp">
-    <a class="dim no-underline br-pill ba bw1 ph4 pv3 mv2 dib near-white b ttu tracked" href="mailto:info@studiocraft.cc">info@studiocraft.cc</a>
-  </div>
-</section>
+{% include contact.html %}
 <section class="dt-ns w-100 near-white bg-near-black" id="contact">
   <div class="db dtc-ns w-100 w-40-ns ph3 ph4-ns pv4 pv6-ns">
     <h2 class="f4 f3-ns mv0 lh-title tracked-tight wow animated fadeInDown" data-action="cursor">{{ site.title }}</h2>
