--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
-title: Home
+title: Index
 layout: default
-slug: home
 ---
 
 <!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="graphicDesign">
