--- a/index.html
+++ b/index.html
@@ -1,45 +1,52 @@
 ---
-title: Index
+title: Home
 layout: default
+slug: home
 ---
 
-<!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="graphicDesign">
-  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Graphic Design</h2>
+<section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="strategy">
+  <h2 class="f2 f1-ns lh-title mv0 tracked-tight wow animated fadeInDown">Strategy</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} focuses on design and technology as a broader approach to experience, product performance and consumer perception.</h3>
-  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/strategy.html">Graphic Design Archive<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <!-- <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/strategy.html">Strategic Capabilities<i class="fa fa-fw fa-long-arrow-right"></i></a> -->
   <p class="measure lh-copy wow animated fadeIn">{{ site.title }} combines new tools with traditional research expertise to develop a deep understanding of the user's wants and needs, and to guide strategy, design and technology decisions.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
-    <li class="fl-ns w-50-ns"><small>Logos and wordsmarks</small></li>
-    <li class="fl-ns w-50-ns"><small>Custom typography and icons</small></li>
-    <li class="fl-ns w-50-ns"><small>Style guides</small></li>
-    <li class="fl-ns w-50-ns"><small>Branding and identity collateral</small></li>
+    <li class="fl-ns w-50-ns"><small>Brand identity and planning</small></li>
+    <li class="fl-ns w-50-ns"><small>Customer research and surveys</small></li>
+    <li class="fl-ns w-50-ns"><small>User personas and pathways</small></li>
+    <li class="fl-ns w-50-ns"><small>Usability and accesibility audits</small></li>
+    <li class="fl-ns w-50-ns"><small>User journeys and flows</small></li>
+    <li class="fl-ns w-50-ns"><small>Sitemaps and wireframes</small></li>
   </ul>
 </section>
-<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="webDesign">
-  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Web Design</h2>
+<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white" id="design">
+  <h2 class="f2 f1-ns lh-title mv0 tracked-tight wow animated fadeInDown">Design</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} strives to create work that is distinct, effective, inspirational and forward-thinking.</h3>
-  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/design.html">Web Design Archive<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <!-- <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/design.html">Design Work<i class="fa fa-fw fa-long-arrow-right"></i></a> -->
   <p class="measure lh-copy wow animated fadeIn">An iterative approach ensures that our clients' goals are realized at every stage of the creative process. {{ site.title }} builds an understanding of all the inputs and outputs of your project to create a concise and engaging approach to design.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
-    <li class="fl-ns w-50-ns"><small>UX pattern libraries</small></li>
+    <li class="fl-ns w-50-ns"><small>Logos and wordmarks</small></li>
+    <li class="fl-ns w-50-ns"><small>Custom typography and icons</small></li>
+    <li class="fl-ns w-50-ns"><small>Styleguides</small></li>
+    <li class="fl-ns w-50-ns"><small>UX pattern and component libraries</small></li>
     <li class="fl-ns w-50-ns"><small>Photography and video</small></li>
   </ul>
 </section>
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white" id="technology">
-  <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Technology Planning</h2>
+  <h2 class="f2 f1-ns lh-title mv0 tracked-tight wow animated fadeInDown">Technology</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">{{ site.title }} takes an agnostic approach towards technology to best fit your needs. We believe that technology can solve real problems by enabling new user experiences that promote growth and innovation.</h3>
-  <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology.html">Technology Services<i class="fa fa-fw fa-long-arrow-right"></i></a>
+  <!-- <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/technology.html">Technology Services<i class="fa fa-fw fa-long-arrow-right"></i></a> -->
   <p class="measure lh-copy wow animated fadeIn">We build across and for all devices, focusing on a client's entire digital ecosystem with context, mobile and user center design at its core to turn your ideas and designs into functional, reliable products and services.</p>
   <ul class="list pa0 mv4 measure-wide cf mid-gray wow animated fadeInUp">
     <label class="db mv1 tracked light-silver b ttu"><small>Services</small></label>
     <li class="fl-ns w-50-ns"><small>Pattern library development</small></li>
     <li class="fl-ns w-50-ns"><small>Web animation development</small></li>
     <li class="fl-ns w-50-ns"><small>Front-end engineering</small></li>
+    <li class="fl-ns w-50-ns"><small>CMS consulting</small></li>
   </ul>
   <div class="cf mw8">
-    <ul class="list fl w-100 w-50-m w-25-l pa0 mv4 mid-gray wow animated fadeInUp">
+    <ul class="list fl w-100 w-50-m w-25-l pa0 mv2 mid-gray wow animated fadeInUp">
       <label class="db mv3 tracked light-silver b ttu"><small>Devices</small></label>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-mobile"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-tablet"></i></li>
@@ -48,7 +55,7 @@ layout: default
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-apple"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-android"></i></li>
     </ul>
-    <ul class="list fl w-100 w-50-m w-25-l pa0 mv4 mid-gray wow animated fadeInUp">
+    <ul class="list fl w-100 w-50-m w-25-l pa0 mv2 mid-gray wow animated fadeInUp">
       <label class="db mv3 tracked light-silver b ttu"><small>Browsers</small></label>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-chrome"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-safari"></i></li>
@@ -57,14 +64,14 @@ layout: default
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-opera"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-edge"></i></li>
     </ul>
-    <ul class="list fl w-100 w-50-m w-25-l pa0 mv4 mid-gray wow animated fadeInUp">
+    <ul class="list fl w-100 w-50-m w-25-l pa0 mv2 mid-gray wow animated fadeInUp">
       <label class="db mv3 tracked light-silver b ttu"><small>Code</small></label>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-html5"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-css3"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-jsfiddle"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-codepen"></i></li>
     </ul>
-    <ul class="list fl w-100 w-50-m w-25-l pa0 mv4 mid-gray wow animated fadeInUp">
+    <ul class="list fl w-100 w-50-m w-25-l pa0 mv2 mid-gray wow animated fadeInUp">
       <label class="db mv3 tracked light-silver b ttu"><small>SCM</small></label>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-git"></i></li>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-github"></i></li>
@@ -72,7 +79,7 @@ layout: default
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-gitlab"></i></li>
     </ul>
   </div>
-</section> -->
+</section>
 {% include contact.html %}
 <section class="dt-ns w-100 near-white bg-near-black" id="contact">
   <div class="db dtc-ns w-100 w-40-ns ph3 ph4-ns pv4 pv6-ns">
@@ -81,7 +88,7 @@ layout: default
       <label class="db mv1 tracked silver b ttu"><small>Contact</small></label>
       <ul class="list pa0 mv0 lh-copy">
         <li><a class="link underline-hover mid-gray" href="mailto:hello@studiocraft.cc"><abbr title="Email" aria-hidden="true"><i class="fa fa-fw fa-envelope"></i></abbr>hello@studiocraft.cc</a></li>
-        <!-- <li><a class="link underline-hover mid-gray" href="tel:760-265-1232"><abbr title="Phone"><i class="fa fa-fw fa-phone" aria-hidden="true"></i></abbr>(760) 265-1232</a></li> -->
+        <li><a class="link underline-hover mid-gray" href="tel:760-265-1232"><abbr title="Phone"><i class="fa fa-fw fa-phone" aria-hidden="true"></i></abbr>(760) 265-1232</a></li>
         <li><a class="link underline-hover mid-gray" href="https://goo.gl/maps/ePAZK239wrC2" target="_blank"><abbr title="Location"><i class="fa fa-fw fa-globe" aria-hidden="true"></i></abbr>New York, NY</a></li>
       </ul>
     </address>
