--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ slug: home
     <li class="fl-ns w-50-ns"><small>Front-end engineering</small></li>
     <li class="fl-ns w-50-ns"><small>CMS consulting</small></li>
   </ul>
-  <div class="cf mw8">
+  <div class="cf mv4 mv0-ns mw8">
     <ul class="list fl w-100 w-50-m w-25-l pa0 mv2 mid-gray wow animated fadeInUp">
       <label class="db mv3 tracked light-silver b ttu"><small>Devices</small></label>
       <li class="dib mh0"><i class="fa fa-fw fa-lg fa-mobile"></i></li>
