Update and rename design.html to web-interactive-design.html

--- a/web-interactive-design.html
+++ b/web-interactive-design.html
@@ -1,10 +1,10 @@
 ---
-title: Design
+title: Web &amp; Interactive Design
 layout: page
-slug: design
+slug: web
 ---
 
-<section class="ph3 ph4-ns pv4 pv6-ns bg-white">
+<!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Visual Design</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">The best solutions seamlessly integrate your business objectives with your visual and verbal presentation. Style without substance is meaningless. Good design is timeless.</h3>
   <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Work<i class="fa fa-fw fa-long-arrow-right"></i></a>
@@ -17,7 +17,7 @@ slug: design
     <li class="fl-ns w-50-ns"><small>3D & Environmental Design</small></li>
   </ul>
 </section>
-<!-- <section class="ph3 ph4-ns pv3 pv5-ns bg-white">
+<section class="ph3 ph4-ns pv3 pv5-ns bg-white">
   <center class="mv4 mv5-ns" data-flickity='{ "wrapAround": true }'>
     <li class="fl-ns w-50-ns"><small>Web and interactive</small></li>
     <li class="fl-ns w-50-ns"><small>Motion effects</small></li>
@@ -110,8 +110,8 @@ slug: design
         </g>
       </svg>
       <figcaption class="f6 f5-ns mv2 mv3-ns lh-copy">New York <small>GMT +5</small></figcaption>
-    </figure> -->
-    <!-- <figure class="w-third w-20-l ma0 fl tc">
+    </figure>
+    <figure class="w-third w-20-l ma0 fl tc">
       <svg id="clock" viewBox="0 0 100 100">
         <circle id="face" cx="50" cy="50" r="40" style="stroke-width:1px; stroke:#111;fill:#fff"/>
         <g id="hands">
@@ -135,7 +135,7 @@ slug: design
     </figure>
   </center>
   </article>
-</section> -->
+</section>
 <section class="ph3 ph4-ns pv3 pv5-ns near-white bg-near-black tc">
     <figure class="w-third w-20-l ma0 fl tc">
       <svg id="clock" viewBox="0 0 100 100">
@@ -229,4 +229,4 @@ slug: design
     <li class="fl-ns w-50-ns"><small>Letterhead and business cards</small></li>
     <li class="fl-ns w-50-ns"><small>Digital wallpapers and banners</small></li>
   </ul>
-</section>
+</section> -->
