Update and rename technology.html to technology-consulting.html

--- a/technology-consulting.html
+++ b/technology-consulting.html
@@ -1,10 +1,10 @@
 ---
-title: Technology
+title: Technology Consulting
 layout: page
 slug: tech
 ---
 
-<section class="ph3 ph4-ns pv4 pv6-ns bg-white">
+<!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
   <h2 class="f2 f1-ns lh-title tracked-tight wow animated fadeInDown">Digital Consulting</h2>
   <h3 class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">Given the multifaceted nature of digital platforms, web channels and devices, {{ site.title }} focuses on identifying key digital initiatives in order to sustain long term continuity and business objectives.</h3>
   <a class="dib link blue underline-hover b ttu mv4" href="{{ site.baseurl }}/#">Recent Case Studies<i class="fa fa-fw fa-long-arrow-right"></i></a>
@@ -42,4 +42,4 @@ slug: tech
     <li class="fl-ns w-50-ns"><small>High fidelity and interactive wireframes</small></li>
     <li class="fl-ns w-50-ns"><small>HTML and CSS prototypes</small></li>
   </ul>
-</section>
+</section> -->
