Update and rename strategy.html to branding-strategy.html

--- a/branding-strategy.html
+++ b/branding-strategy.html
@@ -1,7 +1,7 @@
 ---
-title: Strategy
+title: Branding &amp; Strategy
 layout: page
-slug: strategy
+slug: brand
 ---
 
 <!-- <section class="ph3 ph4-ns pv4 pv6-ns tc tl-ns bg-near-white">
@@ -52,7 +52,7 @@ slug: strategy
       </figure>
     </center>
   </div>
-</section> -->
+</section>
 <section class="ph3 ph4-ns pv4 pv6-ns bg-white">
   <p class="f4 f3-ns normal measure-narrow lh-copy wow animated fadeIn">At {{ site.title }}, during the early stages of any engagement, we are focused on conversation and discussion to better understand the importantance of vision and objectives.</p>
   <p class="measure lh-copy wow animated fadeIn">We start by gathering all specific requirements, business goals, and proposed or desired capabilities to inform a project plan when making crucial decisions regarding objectives, scope, schedule, resources, and deliverables.</p>
@@ -96,7 +96,7 @@ slug: strategy
     <li class="fl-ns w-50-ns"><small>Brand and identity experience</small></li>
   </ul>
 </section>
-<!-- <section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
+<section class="ph3 ph4-ns pv4 pv6-ns bg-near-white">
    <div class="cf w-100">
     <figure class="w-100 w-50-m w-25-l ma0 fl tc">
       <div id="internetPenetration_in" class="h5"></div>
@@ -154,7 +154,6 @@ slug: strategy
     <cite class="fs-normal silver"><a class="dib link blue underline-hover b ttu" href="strategy.html">U.S. Bureau of Labor Statistics<i class="fa fa-fw fa-long-arrow-right"></i></a></cite>
   </figure>
 </section>
-
 <section class="ph3 ph4-ns pv4 pv6-ns near-white bg-near-black">
   <figure class="ma0">
     <div id="appRevenue" class="h5 mv2 mv4-ns"></div>
